<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="app_title">BMI Calculator</string>
    <string name="label_weight">Weight (kg)</string>
    <string name="label_height">Height (cm)</string>
    <string name="label_bmi">BMI</string>
    <string name="label_category">Category</string>
    <string name="btn_calculate">Calculate</string>
    <string name="msg_fill_all_fields">Please fill in all fields</string>
    <string name="msg_invalid_input">Invalid weight or height value</string>
    <string name="bmi_cat_severe_thinness">Severe Thinness</string>
    <string name="bmi_cat_moderate_thinness">Moderate Thinness</string>
    <string name="bmi_cat_mild_thinness">Mild Thinness</string>
    <string name="bmi_cat_normal">Normal</string>
    <string name="bmi_cat_overweight">Overweight</string>
    <string name="bmi_cat_obese_class_1">Obese Class I</string>
    <string name="bmi_cat_obese_class_2">Obese Class II</string>
    <string name="bmi_cat_obese_class_3">Obese Class III</string>
    <string name="dialog_font_changed_title">Font Size Changed</string>
    <string name="dialog_font_changed_msg">Do you want to apply the new font size to this app?</string>
    <string name="btn_use_system">Use System</string>
    <string name="btn_keep_original">Keep Original</string>
</resources>